[package]
name = "llimphi-layout"
description = "Layout engine for llimphi (Flexbox + CSS Grid via taffy)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
taffy = { workspace = true }

[dev-dependencies]
llimphi-hal = { path = "../llimphi-hal" }
llimphi-raster = { path = "../llimphi-raster" }
pollster = { workspace = true }

[[example]]
name = "layout_panels"
path = "examples/layout_panels.rs"
