[package]
name = "llimphi-surface"
description = "Surface/compositing glue for the llimphi UI framework."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
llimphi-hal = { path = "../llimphi-hal", version = "0.1.0" }
llimphi-ui = { path = "../llimphi-ui", version = "0.1.0" }
parking_lot = { workspace = true }
